--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.8.3",
+    "@parcel/transformer-pug": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3",
     "parcel": "^2.8.3"
   },
   "dependencies": {
