--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,4 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 [build]
-  command = "npm run start"
+  command = "npm run install && npm run start"
