--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Messenger",
   "scripts": {
+    "install": "npm i parcel -D && npm i express",
     "dev": "parcel src/index.pug --open --port 3000",
     "build": "parcel build src/index.pug --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js"
