Started to add component system

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "install": "npm i parcel typescript parcel-transformer-pug-precompile -D && npm i express",
-    "dev": "parcel src/index.pug --open --port 3000",
+    "dev": "parcel src/index.html --open --port 3000",
     "build": "parcel build src/index.pug --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js"
   },
