--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   },
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.8.3",
-    "@parcel/transformer-pug": "^2.8.3",
-    "@parcel/transformer-sass": "^2.8.3",
-    "@parcel/transformer-webmanifest": "^2.8.3",
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "nanoid": "^4.0.1",
     "parcel": "^2.8.3",
     "parcel-transformer-pug-precompile": "^1.0.6",
     "typescript": "^4.9.5"
