--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "install": "npm i parcel typescript parcel-transformer-pug-precompile -D && npm i express",
     "dev": "parcel src/index.html --open --port 3000",
     "build": "parcel build src/index.pug --public-url ./ --no-cache",
-    "start": "npm run build && node ./server.js"
+    "start": "npm run build && node ./server.js",
+    "lint:css": "stylelint \"**/*.scss\" --fix"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,20 @@
   },
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "parcel": "^2.8.3",
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "parcel-transformer-pug-precompile": "^1.0.6",
+
     "@parcel/packager-raw-url": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
     "@parcel/transformer-webmanifest": "^2.8.3",
+
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-order": "^4.1.0",
+    "stylelint-order-config-standard": "^0.1.3",
+    
     "nanoid": "^4.0.1",
-    "parcel": "^2.8.3",
-    "parcel-transformer-pug-precompile": "^1.0.6",
     "typescript": "^4.9.5"
   },
   "dependencies": {
