--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "parcel src/index.html --open --port 3000",
     "build": "parcel build src/index.pug --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js",
-    "lint:css": "stylelint \"**/*.scss\" --fix"
+    "lint:css": "stylelint \"**/*.scss\" --fix",
+    "lint:ts": "node_modules/.bin/eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -22,20 +23,20 @@
   },
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "parcel": "^2.8.3",
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-    "parcel-transformer-pug-precompile": "^1.0.6",
-
     "@parcel/packager-raw-url": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
     "@parcel/transformer-webmanifest": "^2.8.3",
-
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "nanoid": "^4.0.1",
+    "parcel": "^2.8.3",
+    "parcel-transformer-pug-precompile": "^1.0.6",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
-    
-    "nanoid": "^4.0.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
