--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "middle.messenger.praktikum.yandex",
-  "version": "1.0.0",
+  "version": "0.2.1",
   "description": "Messenger",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/perspest-prog/middle.messenger.praktikum.yandex.git"
+    "url": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex.git"
   },
   "keywords": [],
   "author": "",
@@ -33,8 +33,8 @@
     "nanoid": "^4.0.1",
     "parcel": "^2.8.3",
     "parcel-transformer-pug-precompile": "^1.0.6",
-    "stylelint": "^15.2.0",
-    "stylelint-config-standard": "^30.0.1",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
     "typescript": "^4.9.5"
