--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "scripts": {
     "install": "npm i express && npm i -D parcel @anikin/parcel-transformer-handlebars-precompile parcel-transformer-pug-precompile typescript nanoid && npm i -D eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin stylelint stylelint-config-standard stylelint-order stylelint-order-config-standard",
-    "dev": "parcel src/index.html --open --port 3000",
-    "build": "parcel build src/index.pug --public-url ./ --no-cache",
+    "dev": "parcel src/index.html --open",
+    "build": "parcel build src/index.html --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js",
     "lint:css": "stylelint \"**/*.scss\" --fix",
-    "lint:ts": "node_modules/.bin/eslint . --fix"
+    "lint:js": "node_modules/.bin/eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,13 @@
     "@parcel/packager-raw-url": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
     "@parcel/transformer-webmanifest": "^2.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "nanoid": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.37.0",
+    "nanoid": "^4.0.2",
     "parcel": "^2.8.3",
     "parcel-transformer-pug-precompile": "^1.0.6",
-    "stylelint": "^13.0.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
@@ -41,9 +41,5 @@
   },
   "dependencies": {
     "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
   }
 }
