--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,5 +10,8 @@
         "indentation": "tab",
         "color-hex-case": "lower",
         "selector-class-pattern": null
-    }
+    },
+    "ignoreFiles": [
+        "./static/**/*"
+    ]
 }
