--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "engines": {
+    "node": "^16.0.0",
+    "npm": "^8.15.0"
   }
 }
