--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,6 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.hbs": ["@anikin/parcel-transformer-handlebars-precompile"],
-    "*.pug": ["parcel-transformer-pug-precompile"]
+    "*.hbs": ["@anikin/parcel-transformer-handlebars-precompile"]
   }
 }
