--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "install": "npm i express && npm i -D parcel @anikin/parcel-transformer-handlebars-precompile parcel-transformer-pug-precompile typescript nanoid && npm i -D eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin stylelint stylelint-config-standard stylelint-order stylelint-order-config-standard",
-    "dev": "parcel src/index.html --open",
+    "dev": "parcel src/index.html --open --port 3000",
     "build": "parcel build src/index.html --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js",
     "lint:css": "stylelint \"**/*.scss\" --fix",
