Fix install command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Messenger",
   "private": true,
   "scripts": {
-    "install": "npm i express && npm i -D parcel @anikin/parcel-transformer-handlebars-precompile parcel-transformer-pug-precompile typescript nanoid && npm i -D eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin stylelint stylelint-config-standard stylelint-order stylelint-order-config-standard",
+    "install": "npm i -D parcel @anikin/parcel-transformer-handlebars-precompile nanoid",
     "dev": "parcel src/index.html --open --port 3000",
     "build": "parcel build src/index.html --public-url ./ --no-cache",
     "start": "npm run build && node ./server.js",
@@ -24,14 +24,14 @@
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-    "@parcel/packager-raw-url": "^2.8.3",
-    "@parcel/transformer-sass": "^2.8.3",
-    "@parcel/transformer-webmanifest": "^2.8.3",
+    "@parcel/packager-raw-url": "^2.9.1",
+    "@parcel/transformer-sass": "^2.9.1",
+    "@parcel/transformer-webmanifest": "^2.9.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
     "nanoid": "^4.0.2",
-    "parcel": "^2.8.3",
+    "parcel": "^2.9.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
