--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/perspest-prog/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@parcel/packager-raw-url": "^2.9.1",
+    "@parcel/transformer-sass": "^2.9.1",
+    "@parcel/transformer-webmanifest": "^2.9.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
