--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,8 @@
 
 [build]
   command = "npm run install && npm run build"
+  publish = "/dist"
 
 [[redirects]]
-  from = "*"
-  to = "/"
+  from = "/*"
+  to = "/index.html"
