--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,13 @@
                 ]
             }
         ],
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": [
+            "error", 
+            { 
+                "ignoreRestArgs": true
+            }
+        ]
     },
     "extends": [
         "eslint:recommended",
